<resources>
    <string name="action_settings">Configurações</string>
    <string name="app_name">Pedidos Agrofrios</string>
    <string name="cad_cli">Cadastrar Clientes</string>
    <string name="cod_cliente">Código do Cliente</string>
    <string name="raz_social">Razão Social</string>
    <string name="fantasia">Cliente Fantasia</string>
    <string name="tel">Telefone</string>
    <string name="insc_est">Inscrição Estadual</string>
    <string name="cnpjCpf">CNPJ/CPF</string>
    <string name="proximo">Próximo</string>
    <string name="voltar">Voltar</string>
    <string name="title_activity_act__main">Act_Main</string>
    <string name="ok">OK</string>
    <string name="title_activity_act_seg_tela">Segunda Tela</string>
    <string name="fechar">Fechar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tela_principal">Tela Principal</string>
    <string name="cadastro">Cadastro de Cliente</string>
    <string name="rua">Rua</string>
    <string name="numero">Nº</string>
    <string name="bairro">Bairro</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="salvar">Salvar</string>
    <string name="vendas">Fazer Vendas</string>
    <string name="pedido">Ver Pedidos</string>
    <string name="cadProdutos">Cadastro de Produtos</string>
    <string name="nome">Nome</string>
    <string name="codigo_produto">Código Produto</string>
    <string name="preco">Preço</string>
    <string name="buscar">Buscar</string>
    <string name="titulo_cadastro_clientes">Cadastro de Clientes</string>
    <string name="titulo_cadastro_produtos">Cadastro de Produtos</string>
    <string name="titulo_cliente_pedido"> Cliente do Pedido</string>
    <string name="titulo_produtos_pedido"> Produtos do Pedido</string>
    <string name="titulo_pedido"> Pedidos</string>
    <string name="titulo_alterar_pedido"> Alterar Pedido</string>

    <string name="titulo_importar_exportar">Importar e Exportar</string>
    <string name="titulo_ver_pedidos">Visualizar Pedidos</string>
    <string name="produto">Produto</string>
    <string name="adicionar">Add Produto</string>
    <string name="salvar_pedido">Salvar Pedido</string>
    <string name="produtos_pedido">Produtos do Pedido</string>
    <string name="cliente">Cliente</string>
    <string name="desconto">Desconto(%)</string>
    <string name="completo">Caixa Completa</string>
    <string name="data_pedido">Data do Pedido</string>
    <string name="alterar_pedido">Alterar Pedido</string>
    <string name="alterar_produto">Alterar preço do Produto</string>
    <string name="gerenciar_ped">GERÊNCIAR PEDIDOS</string>
    <string name="gerenciar_cad">GERÊNCIAR CADASTROS</string>
    <string name="config">CONFIGURAÇÕES</string>
    <string name="visualizar_pedidos">Visualizar Pedidos</string>
    <string name="exportar_pedidos">Exportar Pedidos</string>
    <string name="visualizar">Visualizar</string>
    <string name="alterar">Alterar</string>
    <string name="editar">Editar</string>
    <string name="editar_clientes">Editar Clientes</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="importar_cadastro">Importar Cadastro</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="exportar_clientes">Exportar Clientes</string>
    <string name="importar_cliente">Importar Clientes</string>
    <string name="editar_produtos">Editar Produtos</string>
    <string name="importar_produtos">Importar Produtos</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="exportar_produtos">Exportar Produtos</string>
    <string name="codigo">Código</string>
    <string name="pagamento">Pagamento</string>
    <string name="nome_produto">Nome Produto</string>
    <string name="und_referencia">Und. Referência</string>
    <string name="codcliente">Cód. Cliente</string>
    <string name="paraiba">Paraíba</string>
    <string name="disponivel">Disponível</string>
    <string name="unidade">Unidade</string>
    <string name="selecione_arquivo">Selecione Arquivo</string>
    <string name="diretorio">Diretório</string>
    <string name="excluir_cliente">Excluir Cliente</string>
    <string name="nome_vendedor">Nome do Vendedor</string>
    <string name="configuracoes">Configurações</string>
    <string name="codigo_vendedor">Código do Vendedor</string>
    <string name="excluir_todos_clientes">Excluir Todos Clientes</string>
    <string name="excluir_pedidos">Excluir Todos Pedidos</string>
    <string name="calcular">Calcular</string>
    <string name="calcula_desconto">Calcular Desconto</string>
    <string name="total_c_desconto">Total c/ desconto</string>
    <string name="desconto_reais">Valor do Desconto(R$)</string>
    <string name="sair">Sair</string>
    <string name="desconto_rs">Desconto (R$)</string>
    <string name="total_c_desconto_ver">Total c/ desconto</string>
    <string name="total_pedido">Total do pedido</string>
    <string name="produtos_do_pedido">Produtos do Pedido</string>
    <string name="peca"> - Peça</string>
    <string name="caixa"> - Caixa</string>
    <string name="peca_ou_caixa"> Preço PC/CX</string>
    <string name="total">Total:</string>
    <string name="pecas_caixa">Peças por Caixa</string>
    <string name="unidades_por_peca">Unidades Por Peça</string>
</resources>
