<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000052">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="#000052"
            android:layout_gravity="right"
            android:layout_weight="0.20"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imageButton_voltar_cc_end"
                android:src="@mipmap/icoprev"
                android:background="#00ffffff" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/rua"
                android:id="@+id/textView24"
                android:textColor="#ffffff"
                android:singleLine="true"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textSize="30dp"
                android:layout_marginTop="5dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id = "@+id/et_Rua_cc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_Numero_cc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bairro"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_Bairro_cc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cidade"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_Cidade_cc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cep"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_Cep_cc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/et_estado_cc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="Paraíba"
                android:background="#ffffff" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.20"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/voltar"
                android:id="@+id/bt_voltar_tend"
                android:background="#cecece"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/bt_salvar_ec_end"
                android:layout_toStartOf="@+id/bt_salvar_ec_end"
                android:layout_marginRight="50dp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:text="@string/salvar"
                android:id="@+id/bt_salvar_ec_end"
                android:background="#cecece"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
