<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000052"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="#000052"
            android:layout_gravity="right"
            android:layout_weight="0.20"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/imagebutton_voltar_conf"
                android:src="@mipmap/icoprev"
                android:background="#00ffffff" />

            <TextView
                android:layout_width="222dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/configuracoes"
                android:id="@+id/textView27"
                android:textColor="#ffffff"
                android:singleLine="true"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:textSize="30dp"
                android:layout_marginTop="5dp" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome_vendedor"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp"
                android:id="@+id/textView42" />

            <EditText
            android:id = "@+id/et_nome_vendedor_conf"
            android:layout_width="match_parent"
            android:layout_height="35dp"
                android:background="#ffffff" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo_vendedor"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#ffffff"
                android:layout_marginTop="10dp" />

            <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_codigo_vendedor_conf"
            android:background="#ffffff" />

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btsalvar_conf"
            android:layout_toStartOf="@+id/btsalvar_conf"
            android:gravity="center_horizontal">

            <Button
            android:id="@+id/btvoltar_conf"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/voltar"
                android:background="#cecece"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/btsalvar_conf"
                android:layout_toStartOf="@+id/btsalvar_conf"
                android:layout_marginRight="50dp" />

            <Button
            android:id="@+id/btsalvar_conf"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/salvar"
                android:background="#cecece"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btSalvar_Produto"
            android:layout_toStartOf="@+id/btSalvar_Produto"
            android:background="#eed7af"
            android:layout_margin="30dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imagebutton_excluir_clientes_conf"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icone_excluir130"
                android:background="#00ffffff" />

            <Button
                android:id="@+id/button_excluir_clientes_conf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/excluir_todos_clientes"
                android:background="#00ffffff"
                android:textColor="#01064c"
                android:textStyle="bold"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btSalvar_Produto"
            android:layout_toStartOf="@+id/btSalvar_Produto"
            android:background="#eed7af"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imagebutton_excluir_pedidos_conf"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icone_excluir130"
                android:background="#00ffffff" />

            <Button
                android:id="@+id/button_excluir_pedidos_conf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/excluir_pedidos"
                android:background="#00ffffff"
                android:textColor="#01064c"
                android:textStyle="bold"
                android:textSize="20dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>








